--- a/package.json
+++ b/package.json
@@ -5,23 +5,23 @@
   "version": "0.1.0",
   "author": "Mohamed Oun <mohamed3on@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.10.0",
-    "gatsby-image": "^2.2.1",
-    "gatsby-plugin-feed": "^2.3.0",
-    "gatsby-plugin-google-analytics": "^2.1.0",
-    "gatsby-plugin-manifest": "^2.2.0",
+    "gatsby": "^2.13.2",
+    "gatsby-image": "^2.2.4",
+    "gatsby-plugin-feed": "^2.3.2",
+    "gatsby-plugin-google-analytics": "^2.1.1",
+    "gatsby-plugin-manifest": "^2.2.1",
     "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
-    "gatsby-plugin-sharp": "^2.2.1",
+    "gatsby-plugin-sharp": "^2.2.2",
     "gatsby-plugin-typography": "^2.3.0",
     "gatsby-remark-copy-linked-files": "^2.1.0",
-    "gatsby-remark-images": "^3.1.0",
-    "gatsby-remark-prismjs": "^3.3.0",
-    "gatsby-remark-responsive-iframe": "^2.2.0",
+    "gatsby-remark-images": "^3.1.2",
+    "gatsby-remark-prismjs": "^3.3.1",
+    "gatsby-remark-responsive-iframe": "^2.2.1",
     "gatsby-remark-smartypants": "^2.1.0",
-    "gatsby-source-filesystem": "^2.1.0",
+    "gatsby-source-filesystem": "^2.1.2",
     "gatsby-transformer-remark": "^2.5.0",
-    "gatsby-transformer-sharp": "^2.2.0",
+    "gatsby-transformer-sharp": "^2.2.1",
     "prismjs": "^1.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -38,7 +38,7 @@
     "develop": "gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+    "lint": "eslint . --fix"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.2",
