--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
-  "extends": "react-app",
+  "extends": ["react-app", "plugin:jsx-a11y/recommended"],
+  "plugins": ["jsx-a11y"],
   "globals": { "__PATH_PREFIX__": "readonly" }
 }
