--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
   "name": "mohamed-blog",
+  "version": "0.1.0",
   "private": true,
   "description": "Mohamed Oun's blog repo",
-  "version": "0.1.0",
+  "license": "MIT",
   "author": "Mohamed Oun <mohamed3on@gmail.com>",
+  "scripts": {
+    "build": "gatsby build",
+    "deploy": "now --target production",
+    "dev": "gatsby develop",
+    "lint": "eslint . --fix",
+    "now-build": "yarn build",
+    "serve": "gatsby serve",
+    "start": "yarn dev"
+  },
   "dependencies": {
-    "gatsby": "^2.13.2",
-    "gatsby-image": "^2.2.4",
-    "gatsby-plugin-feed": "^2.3.2",
-    "gatsby-plugin-google-analytics": "^2.1.1",
-    "gatsby-plugin-manifest": "^2.2.1",
-    "gatsby-plugin-offline": "^2.2.0",
-    "gatsby-plugin-react-helmet": "^3.1.0",
-    "gatsby-plugin-sharp": "^2.2.2",
-    "gatsby-plugin-typography": "^2.3.0",
-    "gatsby-remark-copy-linked-files": "^2.1.0",
-    "gatsby-remark-images": "^3.1.2",
-    "gatsby-remark-prismjs": "^3.3.1",
-    "gatsby-remark-responsive-iframe": "^2.2.1",
-    "gatsby-remark-smartypants": "^2.1.0",
-    "gatsby-source-filesystem": "^2.1.2",
-    "gatsby-transformer-remark": "^2.5.0",
-    "gatsby-transformer-sharp": "^2.2.1",
-    "prismjs": "^1.16.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "gatsby": "^2.15.18",
+    "gatsby-image": "^2.2.19",
+    "gatsby-plugin-feed": "^2.3.12",
+    "gatsby-plugin-google-analytics": "^2.1.16",
+    "gatsby-plugin-manifest": "^2.2.17",
+    "gatsby-plugin-offline": "^3.0.7",
+    "gatsby-plugin-react-helmet": "^3.1.7",
+    "gatsby-plugin-sharp": "^2.2.24",
+    "gatsby-plugin-typography": "^2.3.7",
+    "gatsby-remark-copy-linked-files": "^2.1.19",
+    "gatsby-remark-images": "^3.1.22",
+    "gatsby-remark-prismjs": "^3.3.13",
+    "gatsby-remark-responsive-iframe": "^2.2.16",
+    "gatsby-remark-smartypants": "^2.1.8",
+    "gatsby-source-filesystem": "^2.1.24",
+    "gatsby-transformer-remark": "^2.6.23",
+    "gatsby-transformer-sharp": "^2.2.15",
+    "prismjs": "^1.17.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "typeface-merriweather": "0.0.72",
@@ -32,24 +42,14 @@
     "typography": "^0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "dev": "gatsby develop",
-    "start": "yarn dev",
-    "serve": "gatsby serve",
-    "lint": "eslint . --fix",
-    "now-build": "yarn build",
-    "deploy": "now --target production"
-  },
   "devDependencies": {
-    "babel-eslint": "^10.0.2",
-    "eslint": "^6.0.0",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-plugin-flowtype": "^3.10.5",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^1.6.0"
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.4.0",
+    "eslint-config-react-app": "^5.0.1",
+    "eslint-plugin-flowtype": "^4.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1"
   }
 }
