--- a/package.json
+++ b/package.json
@@ -15,28 +15,31 @@
     "start": "yarn dev"
   },
   "dependencies": {
-    "gatsby": "^2.15.18",
-    "gatsby-image": "^2.2.19",
-    "gatsby-plugin-feed": "^2.3.12",
-    "gatsby-plugin-google-analytics": "^2.1.16",
-    "gatsby-plugin-manifest": "^2.2.17",
-    "gatsby-plugin-offline": "^3.0.7",
-    "gatsby-plugin-react-helmet": "^3.1.7",
-    "gatsby-plugin-sharp": "^2.2.24",
-    "gatsby-plugin-typography": "^2.3.7",
-    "gatsby-remark-copy-linked-files": "^2.1.19",
-    "gatsby-remark-images": "^3.1.22",
-    "gatsby-remark-prismjs": "^3.3.13",
-    "gatsby-remark-responsive-iframe": "^2.2.16",
-    "gatsby-remark-smartypants": "^2.1.8",
-    "gatsby-source-filesystem": "^2.1.24",
-    "gatsby-transformer-remark": "^2.6.23",
-    "gatsby-transformer-sharp": "^2.2.15",
+    "babel-plugin-styled-components": "^1.10.6",
+    "gatsby": "^2.15.29",
+    "gatsby-image": "^2.2.24",
+    "gatsby-plugin-feed": "^2.3.15",
+    "gatsby-plugin-google-analytics": "^2.1.20",
+    "gatsby-plugin-manifest": "^2.2.20",
+    "gatsby-plugin-offline": "^3.0.11",
+    "gatsby-plugin-react-helmet": "^3.1.10",
+    "gatsby-plugin-sharp": "^2.2.28",
+    "gatsby-plugin-styled-components": "^3.1.8",
+    "gatsby-plugin-typography": "^2.3.11",
+    "gatsby-remark-copy-linked-files": "^2.1.24",
+    "gatsby-remark-images": "^3.1.25",
+    "gatsby-remark-prismjs": "^3.3.17",
+    "gatsby-remark-responsive-iframe": "^2.2.21",
+    "gatsby-remark-smartypants": "^2.1.11",
+    "gatsby-source-filesystem": "^2.1.29",
+    "gatsby-transformer-remark": "^2.6.27",
+    "gatsby-transformer-sharp": "^2.2.20",
     "prismjs": "^1.17.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
+    "styled-components": "^4.4.0",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.54",
     "typography": "^0.16.19",
