--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sharp": "^2.6.3",
     "gatsby-plugin-styled-components": "^3.3.1",
+    "gatsby-plugin-twitter": "^2.3.3",
     "gatsby-plugin-typography": "^2.5.1",
     "gatsby-remark-copy-linked-files": "^2.3.2",
+    "gatsby-remark-embedder": "^2.1.1",
     "gatsby-remark-images": "^3.3.3",
     "gatsby-remark-prismjs": "^3.5.1",
     "gatsby-remark-responsive-iframe": "^2.4.2",
