--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-remark-embedder": "^2.1.1",
     "gatsby-remark-images": "^3.3.3",
     "gatsby-remark-prismjs": "^3.5.1",
+    "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-responsive-iframe": "^2.4.2",
     "gatsby-remark-smartypants": "^2.3.1",
     "gatsby-source-filesystem": "^2.3.3",
