--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,8 +14,13 @@
         "statusBarItem.hoverBackground": "#8068a6",
         "statusBar.foreground": "#e7e7e7",
         "activityBar.activeBackground": "#8068a6",
-        "statusBar.border": "#67518a",
-        "titleBar.border": "#67518a"
+        "editorGroup.border": "#8068a6",
+        "panel.border": "#8068a6",
+        "sash.hoverBorder": "#8068a6",
+        "sideBar.border": "#8068a6",
+        "statusBarItem.remoteBackground": "#67518a",
+        "statusBarItem.remoteForeground": "#e7e7e7"
     },
-    "peacock.color": "#67518a"
+    "peacock.color": "#67518a",
+    "cSpell.enabled": true
 }
