--- a/package.json
+++ b/package.json
@@ -15,44 +15,45 @@
     "start": "yarn dev"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "^3.3.1",
-    "gatsby-image": "^3.3.0",
-    "gatsby-plugin-google-analytics": "^3.3.0",
-    "gatsby-plugin-manifest": "^3.3.0",
-    "gatsby-plugin-offline": "^4.3.0",
-    "gatsby-plugin-react-helmet": "^4.3.0",
-    "gatsby-plugin-sharp": "^3.3.1",
-    "gatsby-plugin-styled-components": "^4.3.0",
-    "gatsby-plugin-twitter": "^3.3.0",
-    "gatsby-plugin-typography": "^3.3.0",
-    "gatsby-remark-copy-linked-files": "^4.0.0",
+    "babel-plugin-styled-components": "^2.0.2",
+    "gatsby": "^4.2.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-google-analytics": "^4.2.0",
+    "gatsby-plugin-image": "^2.2.0",
+    "gatsby-plugin-manifest": "^4.2.0",
+    "gatsby-plugin-offline": "^5.2.0",
+    "gatsby-plugin-react-helmet": "^5.2.0",
+    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-plugin-styled-components": "^5.2.0",
+    "gatsby-plugin-twitter": "^4.2.0",
+    "gatsby-plugin-typography": "^4.2.0",
+    "gatsby-remark-copy-linked-files": "^5.2.0",
     "gatsby-remark-embedder": "^5.0.0",
-    "gatsby-remark-images": "^5.0.0",
-    "gatsby-remark-prismjs": "^5.0.0",
+    "gatsby-remark-images": "^6.2.0",
+    "gatsby-remark-prismjs": "^6.2.0",
     "gatsby-remark-reading-time": "^1.1.0",
-    "gatsby-remark-responsive-iframe": "^4.0.0",
-    "gatsby-remark-smartypants": "^4.0.0",
-    "gatsby-source-filesystem": "^3.3.0",
-    "gatsby-transformer-remark": "^4.0.0",
-    "gatsby-transformer-sharp": "^3.3.0",
+    "gatsby-remark-responsive-iframe": "^5.2.0",
+    "gatsby-remark-smartypants": "^5.2.0",
+    "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-transformer-remark": "^5.2.0",
+    "gatsby-transformer-sharp": "^4.2.0",
     "gray-percentage": "^2.0.0",
-    "prismjs": "^1.23.0",
+    "prismjs": "^1.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-typography": "^0.16.19",
-    "styled-components": "^5.2.3",
-    "typography": "^0.16.19"
+    "react-typography": "^0.16.20",
+    "styled-components": "^5.3.3",
+    "typography": "^0.16.21"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.22.0",
+    "eslint": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.4.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0"
   }
 }
