--- a/package.json
+++ b/package.json
@@ -15,36 +15,36 @@
     "start": "yarn dev"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^2.0.2",
-    "gatsby": "^4.2.0",
+    "babel-plugin-styled-components": "^2.1.4",
+    "gatsby": "^5.12.12",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-google-analytics": "^4.2.0",
-    "gatsby-plugin-image": "^2.2.0",
-    "gatsby-plugin-manifest": "^4.2.0",
-    "gatsby-plugin-offline": "^5.2.0",
-    "gatsby-plugin-react-helmet": "^5.2.0",
-    "gatsby-plugin-sharp": "^4.2.0",
-    "gatsby-plugin-styled-components": "^5.2.0",
-    "gatsby-plugin-twitter": "^4.2.0",
-    "gatsby-plugin-typography": "^4.2.0",
-    "gatsby-remark-copy-linked-files": "^5.2.0",
-    "gatsby-remark-embedder": "^5.0.0",
-    "gatsby-remark-images": "^6.2.0",
-    "gatsby-remark-prismjs": "^6.2.0",
+    "gatsby-plugin-google-analytics": "^5.12.0",
+    "gatsby-plugin-image": "^3.12.3",
+    "gatsby-plugin-manifest": "^5.12.3",
+    "gatsby-plugin-offline": "^6.12.3",
+    "gatsby-plugin-react-helmet": "^6.12.0",
+    "gatsby-plugin-sharp": "^5.12.3",
+    "gatsby-plugin-styled-components": "^6.12.0",
+    "gatsby-plugin-twitter": "^5.12.3",
+    "gatsby-plugin-typography": "^5.12.0",
+    "gatsby-remark-copy-linked-files": "^5.25.0",
+    "gatsby-remark-embedder": "^7.0.0",
+    "gatsby-remark-images": "^6.25.0",
+    "gatsby-remark-prismjs": "^6.25.0",
     "gatsby-remark-reading-time": "^1.1.0",
-    "gatsby-remark-responsive-iframe": "^5.2.0",
-    "gatsby-remark-smartypants": "^5.2.0",
-    "gatsby-source-filesystem": "^4.2.0",
-    "gatsby-transformer-remark": "^5.2.0",
-    "gatsby-transformer-sharp": "^4.2.0",
+    "gatsby-remark-responsive-iframe": "^6.12.0",
+    "gatsby-remark-smartypants": "^6.12.0",
+    "gatsby-source-filesystem": "^5.12.1",
+    "gatsby-transformer-remark": "^6.12.3",
+    "gatsby-transformer-sharp": "^5.12.3",
     "gray-percentage": "^2.0.0",
-    "prismjs": "^1.25.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "prismjs": "^1.29.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-typography": "^0.16.20",
-    "styled-components": "^5.3.3",
-    "typography": "^0.16.21"
+    "react-typography": "^0.16.23",
+    "styled-components": "^5.3.11",
+    "typography": "^0.16.24"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -55,5 +55,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0"
-  }
+  },
+  "trustedDependencies": [
+    "sharp"
+  ]
 }
