--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/mdx": "^3.1.6",
     "@astrojs/rss": "^4.0.7",
+    "@astrojs/vercel": "^7.8.1",
     "@resvg/resvg-js": "^2.6.2",
+    "@vercel/analytics": "^1.3.1",
     "astro": "^4.15.4",
     "fuse.js": "^7.0.0",
     "lodash.kebabcase": "^4.1.1",
