--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fuse.js": "^7.0.0",
     "lodash.kebabcase": "^4.1.1",
     "remark-collapse": "^0.1.2",
+    "remark-github-blockquote-alert": "^1.3.0",
     "remark-toc": "^9.0.0",
     "satori": "^0.11.0",
     "tailwindcss": "^3.4.11",
