--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/analytics": "^1.3.1",
     "astro": "^4.15.4",
     "fuse.js": "^7.0.0",
+    "katex": "^0.16.21",
     "lodash.kebabcase": "^4.1.1",
     "remark-collapse": "^0.1.2",
     "remark-github-blockquote-alert": "^1.3.0",
