--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "@astrojs/mdx": "^3.1.6",
-    "@astrojs/rss": "^4.0.7",
-    "@astrojs/vercel": "^7.8.1",
+    "@astrojs/check": "0.9.4",
+    "@astrojs/mdx": "4.3.5",
+    "@astrojs/rss": "4.0.12",
+    "@astrojs/vercel": "8.2.7",
     "@resvg/resvg-js": "^2.6.2",
     "@vercel/analytics": "^1.3.1",
-    "astro": "^4.15.4",
+    "astro": "5.13.7",
     "fuse.js": "^7.0.0",
+    "install": "^0.13.0",
     "katex": "^0.16.21",
     "lodash.kebabcase": "^4.1.1",
     "remark-collapse": "^0.1.2",
@@ -31,9 +32,9 @@
     "typescript": "^5.6.2"
   },
   "devDependencies": {
-    "@astrojs/react": "^3.6.2",
-    "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/react": "4.3.1",
+    "@astrojs/sitemap": "3.5.1",
+    "@astrojs/tailwind": "6.0.2",
     "@tailwindcss/typography": "^0.5.15",
     "@types/github-slugger": "^1.3.0",
     "@types/lodash.kebabcase": "^4.1.9",
