--- a/package.json
+++ b/package.json
@@ -17,18 +17,24 @@
     "@astrojs/mdx": "4.3.5",
     "@astrojs/rss": "4.0.12",
     "@astrojs/vercel": "8.2.7",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@resvg/resvg-js": "^2.6.2",
     "@vercel/analytics": "^1.3.1",
     "astro": "5.13.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "fuse.js": "^7.0.0",
     "install": "^0.13.0",
     "katex": "^0.16.21",
     "lodash.kebabcase": "^4.1.1",
+    "lucide-react": "^0.543.0",
     "remark-collapse": "^0.1.2",
-    "remark-github-blockquote-alert": "^1.3.0",
+    "remark-github-blockquote-alert": "^2.0.0",
     "remark-toc": "^9.0.0",
     "satori": "^0.11.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.11",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
