--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   },
   "dependencies": {
     "@astrojs/check": "0.9.4",
+    "@astrojs/cloudflare": "^12.6.9",
     "@astrojs/mdx": "4.3.5",
     "@astrojs/rss": "4.0.12",
-    "@astrojs/vercel": "8.2.7",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@resvg/resvg-js": "^2.6.2",
-    "@vercel/analytics": "^1.3.1",
     "astro": "5.13.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
